--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "minified:main": "dist/split-grid.min.js",
     "module": "dist/split-grid.mjs",
     "types": "index.d.ts",
+    "type": "module",
     "scripts": {
-        "prepublish": "rollup -c",
-        "build": "rollup -c && npm run size",
+        "build": "rollup -c",
         "watch": "rollup -cw",
-        "test": "jest",
-        "size": "echo \"gzip size: $(gzip-size --raw $npm_package_minified_main) bytes\""
+        "test": "jest"
     },
     "repository": "https://github.com/nathancahill/split",
     "author": "Nathan Cahill <nathan@nathancahill.com>",
@@ -24,5 +23,17 @@
     "collective": {
         "type": "opencollective",
         "url": "https://opencollective.com/splitjs"
+    },
+    "devDependencies": {
+        "@rollup/plugin-buble": "^1.0.3",
+        "@rollup/plugin-commonjs": "^28.0.6",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^16.0.1",
+        "@rollup/plugin-terser": "^0.4.4",
+        "rollup": "^4.45.1",
+        "rollup-plugin-terser": "^7.0.2"
+    },
+    "dependencies": {
+        "grid-template-utils": "^1.0.1"
     }
 }
